# podcast_animator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: tests.yaml
